crates/php-parser/tests/snapshots/nikic_stmt_tests__nikic_stmt_generator_yieldunaryprecedence.snap
---
source: crates/php-parser/tests/nikic_stmt_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Function": {
          "name": "gen",
          "params": [],
          "body": [
            {
              "kind": {
                "Expression": {
                  "kind": {
                    "Yield": {
                      "key": null,
                      "value": {
                        "kind": {
                          "UnaryPrefix": {
                            "op": "Plus",
                            "operand": {
                              "kind": {
                                "Int": 1
                              },
                              "span": {
                                "start": 35,
                                "end": 36
                              }
                            }
                          }
                        },
                        "span": {
                          "start": 34,
                          "end": 36
                        }
                      }
                    }
                  },
                  "span": {
                    "start": 28,
                    "end": 36
                  }
                }
              },
              "span": {
                "start": 28,
                "end": 42
              }
            },
            {
              "kind": {
                "Expression": {
                  "kind": {
                    "Yield": {
                      "key": null,
                      "value": {
                        "kind": {
                          "UnaryPrefix": {
                            "op": "Negate",
                            "operand": {
                              "kind": {
                                "Int": 1
                              },
                              "span": {
                                "start": 49,
                                "end": 50
                              }
                            }
                          }
                        },
                        "span": {
                          "start": 48,
                          "end": 50
                        }
                      }
                    }
                  },
                  "span": {
                    "start": 42,
                    "end": 50
                  }
                }
              },
              "span": {
                "start": 42,
                "end": 56
              }
            },
            {
              "kind": {
                "Expression": {
                  "kind": {
                    "Binary": {
                      "left": {
                        "kind": {
                          "Yield": {
                            "key": null,
                            "value": null
                          }
                        },
                        "span": {
                          "start": 56,
                          "end": 62
                        }
                      },
                      "op": "Mul",
                      "right": {
                        "kind": {
                          "UnaryPrefix": {
                            "op": "Negate",
                            "operand": {
                              "kind": {
                                "Int": 1
                              },
                              "span": {
                                "start": 65,
                                "end": 66
                              }
                            }
                          }
                        },
                        "span": {
                          "start": 64,
                          "end": 66
                        }
                      }
                    }
                  },
                  "span": {
                    "start": 56,
                    "end": 66
                  }
                }
              },
              "span": {
                "start": 56,
                "end": 68
              }
            }
          ],
          "return_type": null,
          "by_ref": false,
          "attributes": []
        }
      },
      "span": {
        "start": 7,
        "end": 69
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 69
  }
}
