crates/php-parser/tests/snapshots/nikic_stmt_tests__nikic_stmt_hashbang.snap
---
source: crates/php-parser/tests/nikic_stmt_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Echo": [
          {
            "kind": {
              "String": "foobar"
            },
            "span": {
              "start": 31,
              "end": 39
            }
          }
        ]
      },
      "span": {
        "start": 26,
        "end": 42
      }
    },
    {
      "kind": {
        "InlineHtml": "\n#!/usr/bin/env php"
      },
      "span": {
        "start": 44,
        "end": 63
      }
    }
  ],
  "span": {
    "start": 19,
    "end": 63
  }
}
